fix header time position on mobile #168

--- a/style.css
+++ b/style.css
@@ -764,6 +764,15 @@ input[type="radio"] {
 .hidden {
     visibility: hidden;
 }
+
+.fingerprint-header .time {
+	transform: translate(45px, 30px) rotate(90deg);
+}
+@media (min-width: 700px) {
+	.fingerprint-header .time {
+		transform: none;
+	}
+}
 @media (min-width: 600px) {
     .flex-grid {
         flex-direction: row;
@@ -868,6 +877,10 @@ input[type="radio"] {
     body {
         background: var(--dark-sky);
     }
+
+	.fingerprint-header .time {
+		background: #24242bcf !important;
+	}
 
     strong {
         color: #fff;
